--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,8 @@
    rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
   
 </head>
 <body>
@@ -50,7 +52,7 @@
                                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html#about">About Us</a>
+                                    <a class="nav-link" href="aboutus.html">About Us</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -87,40 +89,39 @@
         </nav>
     </section>
 
+<div class="container">
+  <h1 class="gallery-title">Gallery</h1>
 
-<div class="container mt-3 py-5">
- <h1 >Gallery</h1>
+  <section class="event">
+    <h5 class="event-title">Onam Celebration</h5>
+    <div class="gallery-row">
+      <img src="images/gallery1.jpg" alt="Onam 1">
+      <img src="images/gallery2.jpg" alt="Onam 2">
+      <img src="images/gallery4.jpg" alt="Onam 3">
+      <img src="images/gallery5.jpg" alt="Onam 4">
+      <img src="images/gallery3.jpg" alt="Onam 5">
+    </div>
+  </section>
 
- 
-  <p>
-   
-    <img src="images/gallery1.jpg">
-    <img src="images/gallery2.jpg">
-    <img src="images/gallery4.jpg">
-    <img src="images/gallery5.jpg">
-    <img src="images/gallery3.jpg">
+  <section class="event">
+    <h5 class="event-title">X-mas Celebration</h5>
+    <div class="gallery-row">
+      <img src="images/gallery3.jpg" alt="Xmas 1">
+      <img src="images/gallery5.jpg" alt="Xmas 2">
+      <img src="images/gallery1.jpg" alt="Xmas 3">
+      <img src="images/gallery4.jpg" alt="Xmas 4">
+    </div>
+  </section>
 
-    <h5>Onam Celebration</h5>
-    
-    
-  </p>
-  
-  <p>
-    <img src="images/gallery3.jpg">
-    <img src="images/gallery5.jpg">
-    <img src="images/gallery1.jpg">
-    <img src="images/gallery4.jpg">
-    <h5>X-mas Celebration</h5>
-  </p>
-  
-  <p>
-    <img src="images/gallery1.jpg">
-    <img src="images/gallery3.jpg">
-    <img src="images/gallery2.jpg">
-    <img src="images/gallery4.jpg">
-    <h5>Vishu Celebration</h5>
-  </p>
-  
+  <section class="event">
+    <h5 class="event-title">Vishu Celebration</h5>
+    <div class="gallery-row">
+      <img src="images/gallery1.jpg" alt="Vishu 1">
+      <img src="images/gallery3.jpg" alt="Vishu 2">
+      <img src="images/gallery2.jpg" alt="Vishu 3">
+      <img src="images/gallery4.jpg" alt="Vishu 4">
+    </div>
+  </section>
 </div>
 
 
@@ -137,6 +138,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
 
 </body>
