--- a/past.html
+++ b/past.html
@@ -83,88 +83,91 @@
   </section>
 
 
-  <section id="events">
-    <div class="container mt-5">
-      <h1 class="heading">Past Events</h1>
-      <div class="img mt-4" id="team">
-        <div class="row gap-4">
-
-
-          <div class="d-flex  col-md-12 gap-5">
-
-            <div class="col-md-4">
-              <div class="card d-flex justify-content-center align-items-center">
-                <img src="images/events.jpg" class="card-img-top img-fluid w-50" alt="..." />
-                <div class="card-body">
-                  <h3 class="card-title">Convention</h3>
-
-                </div>
-              </div>
-            </div>
-
-
-            <div class="col-md-4">
-              <div class=" card d-flex justify-content-center align-items-center">
-                <img src="images/event1.jpg" class="card-img-top img-fluid w-50" alt="..." />
-                <div class="card-body">
-                  <h3 class="card-title">Carrom</h3>
-
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4">
-              <div class=" card d-flex justify-content-center align-items-center">
-                <img src="images/event2.jpg" class="card-img-top  img-fluid w-50" alt="..." />
-                <div class="card-body">
-                  <h3 class="card-title">Charity</h3>
-
-                </div>
-              </div>
-            </div>
+<section id="events" class="py-5 mb-5 bg-light">
+  <div class="container">
+    <h1 class="text-center fw-bold mb-5 text-warning">Past Events</h1>
+    
+    <div class="row g-5">
+      <!-- Event Card 1 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow border-0 h-100">
+          <img src="images/events.jpg" class="card-img-top img-fluid" alt="Convention" />
+          <div class="card-body">
+            <h3 class="card-title text-center text-dark">Convention</h3>
+            <p class="card-text text-secondary text-center">
+              Join our annual cultural convention celebrating community, heritage, and creativity.
+            </p>
           </div>
+        </div>
+      </div>
 
-          <div class="d-flex  col-md-12 gap-5">
-
-
-            <div class="col-md-4">
-              <div class=" card d-flex justify-content-center align-items-center">
-                <img src="images/event 3.jpg" class="card-img-top  img-fluid w-50" alt="..." />
-                <div class="card-body">
-                  <h3 class="card-title">Onam</h3>
-
-                </div>
-              </div>
-
-            </div>
-
-
-            <div class="col-md-4">
-              <div class="card d-flex justify-content-center align-items-center">
-                <img src="images/event4.jpg" class="card-img-top  img-fluid w-50" alt="..." />
-                <div class="card-body">
-                  <h3 class="card-title">Onam</h3>
-
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4">
-              <div class="card d-flex justify-content-center align-items-center">
-                <img src="images/event5.jpg" class="card-img-top  img-fluid w-50" alt="..." />
-                <div class="card-body">
-                  <h3 class="card-title">Carrom</h3>
-
-                </div>
-              </div>
-            </div>
+      <!-- Event Card 2 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow border-0 h-100">
+          <img src="images/event1.jpg" class="card-img-top img-fluid" alt="Carrom" />
+          <div class="card-body">
+            <h3 class="card-title text-center text-dark">Carrom</h3>
+            <p class="card-text text-secondary text-center">
+              Friendly carrom tournament for all ages. Sign up with your team today!
+            </p>
           </div>
+        </div>
+      </div>
 
+      <!-- Event Card 3 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow border-0 h-100">
+          <img src="images/event2.jpg" class="card-img-top img-fluid" alt="Charity" />
+          <div class="card-body">
+            <h3 class="card-title text-center text-dark">Charity</h3>
+            <p class="card-text text-secondary text-center">
+              Support our outreach efforts with this community-driven fundraising event.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Event Card 4 -->
+      <div class="col-md-6 col-lg-4 my-5 py-5">
+        <div class="card shadow border-0 h-100">
+          <img src="images/event 3.jpg" class="card-img-top img-fluid" alt="Onam" />
+          <div class="card-body">
+            <h3 class="card-title text-center text-dark">Onam</h3>
+            <p class="card-text text-secondary text-center">
+              Celebrate Onam with traditional food, games, and performances.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Event Card 5 -->
+      <div class="col-md-6 col-lg-4 my-5 py-5">
+        <div class="card shadow border-0 h-100">
+          <img src="images/event4.jpg" class="card-img-top img-fluid" alt="Onam" />
+          <div class="card-body">
+            <h3 class="card-title text-center text-dark">Onam</h3>
+            <p class="card-text text-secondary text-center">
+              Another Onam celebration filled with vibrant culture and joy.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Event Card 6 -->
+      <div class="col-md-6 col-lg-4 my-5 py-5">
+        <div class="card shadow border-0 h-100">
+          <img src="images/event5.jpg" class="card-img-top img-fluid" alt="Carrom" />
+          <div class="card-body">
+            <h3 class="card-title text-center text-dark">Carrom</h3>
+            <p class="card-text text-secondary text-center">
+              Another chance to test your skills and win in our Carrom challenge!
+            </p>
+          </div>
         </div>
       </div>
     </div>
-
-  </section>
+  </div>
+</section>
 
 
   <footer class="">
