--- a/team.html
+++ b/team.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -77,47 +79,42 @@
         </nav>
     </section>
 
-<div class="container mt-2">
-    <h1 class="heading">Team</h1>
-    <div class="img" id="team">
-        <div class="row gap-3">
-            <div class="d-flex  col-md-12 gap-5 justify-content-center align-items-center">
-                <div class="col-md-3 ">
-                    <img src="images/p1.jpg" class="img-fluid w-50" alt="..." />
-                    <h3>Abraham</h3>
-                    <p>President</p>
-                </div>
-                <div class="col-md-3">
-                    <img src="images/p2.jpg" class="img-fluid w-50" alt="..." />
-                    <h3>Alfred</h3>
-                    <p>General Secretary</p>
-                </div>
-                <div class="col-md-3">
-                    <img src="images/p3.jpg" class="img-fluid w-50" alt="..." />
-                    <h3>Daniel</h3>
-                    <p>Treasurer</p>
-                </div>
-            </div>
-            <div class="d-flex  col-md-12 gap-5 justify-content-center align-items-center">
-                <div class="col-md-3">
-                    <img src="images/p4.jpg" class="img-fluid w-50" alt="..." />
-                    <h3>Alwin</h3>
-                    <p>Vice President</p>
-                </div>
-                <div class="col-md-3">
-                    <img src="images/p5.jpg" class="img-fluid w-50" alt="..." />
-                    <h3>George</h3>
-                    <p>Joint Secretary</p>
-                </div>
-                <div class="col-md-3">
-                    <img src="images/p6.jpg" class="img-fluid w-50" alt="..." />
-                    <h3>Alex</h3>
-                    <p>Joint Treasurer</p>
-                </div>
-            </div>
+<div class="container team-section text-center">
+    <h1 class="heading mb-5">Meet Our Team</h1>
+    <div class="row justify-content-center g-5">
+        <div class="col-md-4 col-sm-6 team-member">
+            <img src="images/p1.jpg" class="img-fluid rounded-circle team-img" alt="Abraham">
+            <h4 class="mt-3 mb-1">Abraham</h4>
+            <p class="text-muted">President</p>
+        </div>
+        <div class="col-md-4 col-sm-6 team-member">
+            <img src="images/p2.jpg" class="img-fluid rounded-circle team-img" alt="Alfred">
+            <h4 class="mt-3 mb-1">Alfred</h4>
+            <p class="text-muted">General Secretary</p>
+        </div>
+        <div class="col-md-4 col-sm-6 team-member">
+            <img src="images/p3.jpg" class="img-fluid rounded-circle team-img" alt="Daniel">
+            <h4 class="mt-3 mb-1">Daniel</h4>
+            <p class="text-muted">Treasurer</p>
+        </div>
+        <div class="col-md-4 col-sm-6 team-member">
+            <img src="images/p4.jpg" class="img-fluid rounded-circle team-img" alt="Alwin">
+            <h4 class="mt-3 mb-1">Alwin</h4>
+            <p class="text-muted">Vice President</p>
+        </div>
+        <div class="col-md-4 col-sm-6 team-member">
+            <img src="images/p5.jpg" class="img-fluid rounded-circle team-img" alt="George">
+            <h4 class="mt-3 mb-1">George</h4>
+            <p class="text-muted">Joint Secretary</p>
+        </div>
+        <div class="col-md-4 col-sm-6 team-member">
+            <img src="images/p6.jpg" class="img-fluid rounded-circle team-img" alt="Alex">
+            <h4 class="mt-3 mb-1">Alex</h4>
+            <p class="text-muted">Joint Treasurer</p>
         </div>
     </div>
 </div>
+
 
 <footer class="">
     <div class="p-3">
@@ -128,6 +125,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+
 
 </body>
 </html>
